# pixshift

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-labeler.yml  release.yml
docs/: ARCHITECTURE.md  COMMANDS.md  JSON_OUTPUT.md  LABEL_STRATEGY.md  PHASE1_CHECKLIST.md  RELEASE_PR_FIRST.md  RELEASING.md
examples/advanced/: README.md  compare_quality.sh  crop_social_pack.sh  montage_board.sh  optimize_scan.sh  watch_once.sh  watermark_batch.sh
examples/automation/: README.md  compress_report.sh  dedup_ci.sh  pdf_info_export.sh
pixshift/: __init__.py  cli.py  compare_engine.py  compress_engine.py  converter.py  crop_engine.py  dedup_engine.py  logo.py  montage_engine.py  optimize_engine.py  pdf_engine.py  strip_engine.py  watch_engine.py  watermark_engine.py
pixshift/commands/: __init__.py  advanced_commands.py  convert_command.py  pdf_commands.py  system_commands.py  workflow_commands.py
pixshift/core/: __init__.py  files.py  models.py
pixshift/ops/: __init__.py  compare.py  compress.py  convert.py  crop.py  dedup.py  montage.py  optimize.py  pdf.py  strip.py  watch.py  watermark.py
pixshift/presenters/: __init__.py  cli_presenters.py  json_presenters.py
tests/: test_advanced_json_outputs.py  test_cli_smoke.py  test_converter_fixtures.py  test_core_files.py  test_json_outputs.py  test_ops_wrappers.py  test_runtime_formats.py  test_system_and_presenters.py  test_workflow_behaviors.py
